...
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical"
              android:background="@color/pillipaevik_peamine_taust">
    <EditText
        android:id="@+id/nimi"
        android:hint="@string/nimi_vihje"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/tekstilahtri_aaris"
        android:layout_marginStart="@dimen/horisontaalne_aaris"
        android:layout_marginEnd="@dimen/horisontaalne_aaris"
        android:backgroundTint="@android:color/white"
        android:maxLength="48"
        android:inputType="textCapSentences|textMultiLine"/>
    <EditText
        android:id="@+id/autor"
        android:hint="@string/autor_vihje"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/horisontaalne_aaris"
        android:layout_marginEnd="@dimen/horisontaalne_aaris"
        android:backgroundTint="@android:color/white"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:maxLength="64"
        android:inputType="textCapSentences|textMultiLine"/>
    <EditText
            android:id="@+id/kommentaar"
            android:hint="@string/kommentaar_vihje"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/horisontaalne_aaris"
            android:layout_marginEnd="@dimen/horisontaalne_aaris"
            android:layout_marginBottom="@dimen/vertikaalne_aaris"
...
