...
    <LinearLayout android:layout_width="wrap_content"
                  android:layout_height="match_parent"
                  android:layout_weight="1"
                  android:background="@color/pillipaevik_peamine_taust"
                  android:orientation="vertical">
        <TextView
                android:id="@+id/content"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingStart="@dimen/horisontaalne_aaris"
                android:paddingTop="@dimen/tekstilahtri_aaris"
                android:singleLine="true"
                android:layout_weight="1"
...
                  android:layout_height="match_parent"
                  android:layout_weight="0"
                  android:visibility="gone"
                  android:background="@color/pillipaevik_peamine_taust"
                  android:orientation="vertical">
        <ImageView
                android:id="@+id/arhiivipilt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:scaleType="centerCrop"
                android:scaleX="@dimen/pildikeste_vahendamine_50pc"
                android:scaleY="@dimen/pildikeste_vahendamine_50pc"
...
